--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <title>Карточки | Проект 1</title>
 </head>
 <body>
 <div class="container">
   <div
       class="slide"
-      style="background-image: url('https://images.unsplash.com/photo-1583121274602-3e2820c69888?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');"
-  >
-    <h3>Ferrari</h3>
+        style="background-image: url('https://images.unsplash.com/photo-1583121274602-3e2820c69888?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');"
+    >
+    <h3 class='slide_heading'>Ferrari</h3>
   </div>
   <div
       class="slide"
@@ -20,7 +20,7 @@
           background-image: url('https://images.unsplash.com/photo-1573950940509-d924ee3fd345?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1696&q=80');
         "
   >
-    <h3>Lamborghini</h3>
+    <h3 class='slide_heading'>Lamborghini</h3>
   </div>
   <div
       class="slide"
@@ -28,7 +28,7 @@
           background-image: url('https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1694&q=80');
         "
   >
-    <h3>Camaro</h3>
+    <h3 class='slide_heading'>Camaro</h3>
   </div>
   <div
       class="slide"
@@ -36,17 +36,17 @@
           background-image: url('https://images.unsplash.com/photo-1535732820275-9ffd998cac22?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1650&q=80');
         "
   >
-    <h3>Aston</h3>
+    <h3 class='slide_heading'>Aston</h3>
   </div>
   <div
-      class="slide"
+      class="slide active"
       style="
           background-image: url('https://images.unsplash.com/photo-1554744512-d6c603f27c54?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');
         "
   >
-    <h3>Tesla</h3>
+    <h3 class='slide_heading'>Tesla</h3>
   </div>
 </div>
-<script src='script.js'></script>
+<script src='js/script.js'></script>
 </body>
 </html>
